src/tests/functionality/assignment_4_control_flow/invalid_semantic/05_enum_constant_redeclaration.c
enum Status {
    READY,
    BUSY,
    READY
};

int main() {
    int x = READY;
    return x;
}